# Backtest

./: .gitattributes  .gitignore  Champion_Strategy_Presentation.pptx  Champion_Strategy_Presentation_v4.pptx  Client_Report_Contrarian_Quarterly.md  Contrarian_Strength_Presentation_v9.pptx  Final_Strategy_Report.md  Hidden_Momentum_Presentation_v7.pptx  Ignored_Momentum_Presentation_v8.pptx  Prompts.xlsx  Quality_Growth_Value_Strategy.pptx  analyze_ex_top100.py  analyze_industry_sentiment_returns.py  analyze_investor_density.py  analyze_market_tops.py  analyze_market_tops_all_stocks.py  analyze_regime_predictive_power_advanced.py  analyze_specific_trades.py  analyze_stock_return.py  backtest_gradual_2y_8q_8lookback.py  backtest_gradual_2y_8q_group_logic.py  backtest_gradual_30_stock.py  backtest_gradual_balanced.py  backtest_gradual_entry.py  backtest_gradual_ultra_concentrated.py  calculate_all_industries_rsnp.py  check_raw_benchmark.py  check_universe.py  clean_price_data.py  compare_12q_returns.py  compare_2y_full_returns.py  compare_3q_returns.py  compare_champion_vs_benchmark.py  compare_champion_vs_frictionless_benchmark.py  compare_cs15_vs_mcps15.py  compare_cs15_vs_shb.py  compare_history_variation.py  compare_lookback_variations.py  compare_mcps12_segments.py  compare_original_strategies.py  (+160 more)
my-backtesting-engine/: COMPLETE_DATA_SUMMARY.md  DATA_QUALITY_REPORT.md  FOLDER_STRUCTURE.md  Feb_2026_Full_35_35_RSNP_Rankings.xlsx  Feb_2026_Q1_DeepContrarian_Rebalance.xlsx  MARKET_CAP_SYSTEM.md  PARQUET_CONVERSION_SUMMARY.md  PORTFOLIO_BACKTEST_QUICK_REF.md  README.md  (+44 more)
(+1819 files in other folders)
