[tool.poetry]
name = "my-backtesting-engine"
version = "0.1.0"
description = "A complete backtesting engine for historical data."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.group.test.dependencies]
pytest = ">=8.0.0"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3"
numpy = "^1.21"
matplotlib = "^3.4"
scikit-learn = "^0.24"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"